[project]
name = "gitlb-client"
version = "0.1.0"
description = "A simple gitlab http client"
readme = "README.md"
authors = [
    { name = "vtitov", email = "v.v.titov94@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
